# desktopassistant

./: .gitignore  CHANGELOG.md  chat_app.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py
daserver/chat_server/: pyproject.toml  requirements.txt
daserver/chat_server/app/: main.py
daserver/chat_server/tests/: analyze_wav.py  test_chat.py  websocket_test_client.py
desktopassistant/: __init__.py  macos_rumps_app.py  main.py  voice_handler.py
desktopassistant/templates/: chat.html
referencedocs/: voice_recognition.md
src/: README.md  main.py
src/daserver/chat_server/: .gitignore  pyproject.toml
src/daserver/chat_server/app/: main.py
src/daserver/chat_server/tests/: analyze_pcm.py  test_chat.py
src/desktopassistant/: __init__.py  macos_rumps_app.py  main.py  voice_handler.py
src/desktopassistant/assets/: .gitkeep
src/referencedocs/: how_to_make_windows_systray_chat_app.md
src/templates/: chat.html
tests/: test_chat.py  test_systray.py
